fix alignment on mobile

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -71,4 +71,10 @@
   transform: translateY(0);
 }
 
-
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+}
